sample_manifest (6).yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: 'mbsgui-master-java-prod'
  namespace: 'mbs-test'
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/load-balance: "round_robin"
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    project: 'mbs-app-gui'
    branch: 'master'
    commit: 'b98c81a'
    role: java
    environment: prod
spec:
  rules:
    - host: mbsgui-prod.kubeodc-test.corp.intranet
      http:
        paths:
          - path: /
            backend:
              serviceName: 'mbsgui-master-java-prod'
              servicePort: 8080
  tls:
    - hosts:
      - 'mbsgui-prod.kubeodc-test.corp.intranet'
      secretName: managed-tls-secret
---
---
apiVersion: v1
kind: Service
metadata:
  name: 'mbsgui-master-java-prod'
  namespace: 'mbs-test'
  labels:
    project: 'mbs-app-gui'
    branch: 'master'
    commit: 'b98c81a'
    role: java
    environment: prod
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    project: 'mbs-app-gui'
    branch: 'master'
    commit: 'b98c81a'
    role: java
    environment: prod
  type: ClusterIP
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 'mbsgui-master-java-prod'
  labels:
    project: 'mbs-app-gui'
    branch: 'master'
    commit: 'b98c81a'
    role: java
    environment: prod
spec:
  selector:
    matchLabels:
      project: 'mbs-app-gui'
      branch: 'master'
      role: java
      environment: prod
  replicas: 1
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        project: 'mbs-app-gui'
        branch: 'master'
        commit: 'b98c81a'
        role: java
        environment: prod
    spec:
      containers:
        - name: java-master
          image: 'nexusprod.corp.intranet:4567/mbs_dev/mbs-app-gui:master'
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: 2048Mi
              cpu: 250m
            requests:
              memory: 512Mi
              cpu: 100m
      imagePullSecrets:
        - name: mbs-app-gui-master
---
---
